--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ html {
 h1 {
     text-shadow: 0.1em 0.1em 0.2em rgb(7, 7, 7);
     font-size: 45px;
-    color: rgb(6, 247, 26);
+    color: rgba(10, 6, 247, 1);
 }
 
 a {
